--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,15 @@
 channels:
   - bioconda
+  - conda-forge
   - defaults
 dependencies:
   - fastqc=0.11.8
   - htslib=1.9
   - multiqc=0.9
   - python=3.5
+  - r=3.5
+  - r-tidyverse=1.2.1
   - samtools=1.9
   - snakemake=3.13.3
   - star=2.6.1b
+  - tectonic
