Fix file path in `config.yml`

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 # Data path
-datadir: "data/test_data/fastq/"
+datadir: "data/test-data/fastq/"
 
 # Software paths
 fastqcdir: "results/fastqc/{sample}/"
