Move `{sample}` out of config.yml path definitions
Move the `{sample}` parts out of the `config.yml` path definitions into
the rules, to increase clarity. Also use absolute paths for the config
variables (e.g. `REF_GENE`) in the RSeqC rule.

--- a/config.yml
+++ b/config.yml
@@ -2,9 +2,9 @@
 datadir: "data/test-data/fastq/"
 
 # Software paths
-fastqcdir: "results/fastqc/{sample}/"
-aligndir: "results/star/{sample}/"
-rseqcdir: "results/rseqc/{sample}/"
+fastqcdir: "results/fastqc/"
+aligndir: "results/star/"
+rseqcdir: "results/rseqc/"
 multiqcdir: "results/multiqc/"
 
 # Indexes and reference files
