--- a/config.yml
+++ b/config.yml
@@ -8,9 +8,9 @@ rseqcdir: "results/rseqc/"
 multiqcdir: "results/multiqc/"
 
 # Indexes and reference files
-REF: "/sw/data/uppnex/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa"
-STAR_REF: "/sw/data/uppnex/igenomes/Homo_sapiens/NCBI/GRCh38/Sequence/STARIndex/"
-REF_GENE: "/sw/data/uppnex/igenomes/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
+REF: "data/idx/genome.fa"
+STAR_REF: "data/idx/STARIndex/"
+REF_GENE: "data/idx/genes.bed"
 
 # Software parameters
 STAR_THREADS: 2
