--- a/environment.yml
+++ b/environment.yml
@@ -3,14 +3,24 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - fastqc=0.11.8
-  - htslib=1.9
-  - multiqc=1.5
+
+  # Base Python/R installations
   - python=3.5
   - r=3.5
-  - r-tidyverse=1.2.1
-  - r-tinytex=0.10
-  - rseqc=3.0.0
-  - samtools=1.9
+
+  # Workflow management with Snakemake
   - snakemake=5.4
-  - star=2.6.1b
+
+  # Software for working with and analysing HTS data
+  - fastqc=0.11.8  # FastQC, for quality control of raw sequencing data
+  - htslib=1.9     # featureCounts, for counting of aligned RNA-seq data
+  - multiqc=1.5    # MultiQC, for aggregating multiple QC metrics of HTS data
+  - rseqc=3.0.0    # RSeqC, for quality control of aligned data
+  - samtools=1.9   # Samtools, for working with alignmend (SAM/BAM) files
+  - star=2.6.1b    # STAR, for aligning RNA-seq data
+
+  # General data analysis and statistics
+  - r-tidyverse=1.2.1  # R-tidyverse, for data and statistics within R
+
+  # Compiling templates and reports
+  - r-tinytex=0.10  # Packages needed for compiling the `knitr-PDR` report
