--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,23 @@ _book/
 
 # R
 .Rhistory
+.Rapp.history
+.RData
+.RDataTmp
+.Ruserdata
+*-Ex.R
+/*.Rcheck/
+.Rproj.user/
+vignettes/*.html
+vignettes/*.pdf
+.httr-oauth
+*_cache/
+/cache/
+*.utf8.md
+*.knit.md
+.Renviron
+po/*~
+rsconnect/
 
 # Snakemake
 .snakemake/
